--- a/style.css
+++ b/style.css
@@ -558,7 +558,8 @@ body {
   font-weight: var(--font-weight-light);
   line-height: 1.6;
   color: var(--color-secondary);
-  margin: 0 0 0.5rem 0;
+  margin: 0;
+  margin-bottom: 1em;
 }
 
 .about__paragraph:last-of-type {
